--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -40,7 +40,7 @@
                     <div class="titulo">SISTEMA DE INFORMACIÓN Y MONITOREO</div>
                     <div class="entrar_link">
                         <img src="/archivos/imagen/entrar.png" alt="Entrar">
-                        <a href="/admin/">Entrar</a>
+                        <a href="/admin/">Entrar</a> | <a href="/archivos/manualdeUsuarioMonitoreoSIMAS.pdf">Descargar Manual de Usuario</a>
                     </div>
                     <div class="clean"></div>
                 </div>
