--- a/monitoreo/templates/simas/ingreso.html
+++ b/monitoreo/templates/simas/ingreso.html
@@ -252,8 +252,8 @@ function Grafo10(){
 <!--            <a href="#" id="grafico8" onCLick="click_callback('aportar')">Persona aportar en la finca</a>-->
         </div>
     </div>
-    <div id="grafo"></div>
-     <table id="sortTableExample">
+    <div id="grafo" style="width:670px;"></div>
+     <table id="sortTableExample" class="tablesorter">
         <caption>Agroforestales</caption>
         <thead>
             <tr>
@@ -288,7 +288,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table id="sortTableExample2">
+    <table id="sortTableExample2" class="tablesorter">
         <caption>Forestales</caption>
         <thead>
             <tr>
@@ -323,7 +323,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table id="sortTableExample">
+    <table id="sortTableExample" class="tablesorter">
         <caption>Granos básicos</caption>
         <thead>
             <tr>
@@ -358,7 +358,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table id="sortTableExample">
+    <table id="sortTableExample" class="tablesorter">
         <caption>Ganado mayor</caption>
         <thead>
             <tr>
@@ -393,7 +393,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table id="sortTableExample">
+    <table id="sortTableExample" class="tablesorter">
         <caption>Animales de patio</caption>
         <thead>
             <tr>
@@ -428,7 +428,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table id="sortTableExample">
+    <table id="sortTableExample" class="tablesorter">
         <caption>Hortalizas y frutas</caption>
         <thead>
             <tr>
@@ -463,7 +463,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table id="sortTableExample">
+    <table id="sortTableExample" class="tablesorter">
         <caption>Musaceas</caption>
         <thead>
             <tr>
@@ -498,7 +498,7 @@ function Grafo10(){
 
     </table>
     <br></br>
-    <table id="sortTableExample">
+    <table id="sortTableExample" class="tablesorter">
         <caption>Raíces y tubérculos</caption>
         <thead>
             <tr>
@@ -538,7 +538,7 @@ function Grafo10(){
     </table>
 </div>
     <br><div class="subindicador">INGRESO  &raquo; Los Otros Ingresos familiares <a href="#" class="exportar"></a></div><br>
-    <table id="sortTableExample">
+    <table id="sortTableExample" class="tablesorter">
         <caption></caption>
         <thead>
             <tr>
