Pimping las templates

--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -101,7 +101,8 @@
             <div class="wrapper">
                 <div class="organizaciones">
                     <span class="title">Organizaciones de:</span><br>
-                    <span class="zonas">Zona Alta &nbsp;| Zona Seca</span>
+                    <span class="zonas">Zona Alta &nbsp; | ADEES</span>
+                    <span class="zonas">Zona Seca &nbsp; | </span>
                 </div>
                 <div class="made">
                     <div class="developed">
