--- a/monitoreo/templates/nav_org.html
+++ b/monitoreo/templates/nav_org.html
@@ -1,7 +1,5 @@
 <div id="contenedor_igual">
-  <a href="/gremial" class="educacion">Gremial</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
-  <a href="/comunitario" class="educacion">Comunitaria</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
+  <a href="/gremial" class="gremial">Gremial</a>
+  <a href="/comunitario" class="comunitario">Comunitaria</a>
 </div>
 
