--- a/monitoreo/templates/nav_riesgos.html
+++ b/monitoreo/templates/nav_riesgos.html
@@ -1,6 +1,4 @@
 <div id="contenedor_igual">
-  <a href="/vulnerable" class="educacion">Vulnerabilidad de la finca</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
-  <a href="/mitigariesgos" class="educacion">Mitigación de riesgos</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
+  <a href="/vulnerable" class="vulnerable">Vulnerabilidad de la finca</a>
+  <a href="/mitigariesgos" class="mitigariesgos">Mitigación de riesgos</a>
 </div>
