--- a/monitoreo/templates/nav_suelo.html
+++ b/monitoreo/templates/nav_suelo.html
@@ -1,6 +1,4 @@
 <div id="contenedor_igual">
-  <a href="/suelos" class="educacion">Carácteristicas del terreno</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
-  <a href="/manejosuelo" class="educacion">Manejo del suelo</a>
-  <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
+  <a href="/suelos" class="suelo">Carácteristicas del terreno</a>
+  <a href="/manejosuelo" class="manejosuelo">Manejo del suelo</a>
 </div>
