--- a/monitoreo/templates/nav_tierra.html
+++ b/monitoreo/templates/nav_tierra.html
@@ -1,6 +1,4 @@
 <div id="contenedor_igual">
-    <a href="/fincas" class="educacion">Uso de tierra</a>
-    <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
-    <a href="/arboles" class="educacion">Existencia de árboles y Reforestación</a>
-    <img src="/archivos/imagen/separadorsi.png" alt="" title="" class="separador_vert2">
+    <a href="/fincas" class="tierra">Uso de tierra</a>
+    <a href="/arboles" class="arboles">Existencia de árboles y Reforestación</a>
 </div>
