--- a/monitoreo/templates/simas/generales.html
+++ b/monitoreo/templates/simas/generales.html
@@ -218,6 +218,7 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block contenido %}
+<div class="contenido">
 <br>
 <center><h1>Datos Generales de las {{total_encuesta}} Familias encuestadas</h1></center>
 </br>
@@ -327,5 +328,5 @@ $(document).ready(function() {
     </table>
     <div id="container3"></div>
 <br></br>
-
+</div>
 {% endblock %}
