--- a/monitoreo/templates/simas/manejo_agro.html
+++ b/monitoreo/templates/simas/manejo_agro.html
@@ -1,8 +1,8 @@
 {% extends "base.html"%}
 {%load unslugify %}
 {% block titulo %}
-Subindicador Opciones de Manejo Agroecológico
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+Opciones de Manejo Agroecológico
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a></div>
 {% endblock%}
 {% block contenido %}
 
