--- a/monitoreo/templates/simas/mitigacion.html
+++ b/monitoreo/templates/simas/mitigacion.html
@@ -1,6 +1,9 @@
 {% extends "base.html"%}
 {%load unslugify %}
 {%block extra_header%}
+<style type="text/css">
+    .mitigariesgos{background: url(/archivos/imagen/fondosubmenuhover.png) repeat-x;}
+</style>
 <script type="text/javascript" src="{{MEDIA_URL}}js/highcharts.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}js/exporting.js"></script>
 <script type="text/javascript">
