--- a/monitoreo/templates/simas/seguridad.html
+++ b/monitoreo/templates/simas/seguridad.html
@@ -463,8 +463,8 @@ var chart;
 </script>
 {% endblock %}
 {% block titulo %}
-Subindicador Seguridad alimentaria
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+Seguridad alimentaria
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador<span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a> </div>
 {% endblock%}
 {% block contenido %}
 
