--- a/monitoreo/templates/simas/semilla.html
+++ b/monitoreo/templates/simas/semilla.html
@@ -1,8 +1,8 @@
 {% extends "base.html"%}
 {%load unslugify %}
 {% block titulo %}
-Subindicador Uso de Semilla
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+Uso de Semilla
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a></div>
 {% endblock%}
 {% block contenido %}
 <div id="mostrar">
