--- a/monitoreo/media/css/style.css
+++ b/monitoreo/media/css/style.css
@@ -10,18 +10,19 @@ body{
     height: 108px;
 }
 #user1{
-    background: #384e66;
+    background: url(/archivos/imagen/fondomonitoreo.jpg);
     border-top: 1px #707070 solid;
     
 }
 #user2{
-    background: #e8e8e8;
+    background: #fff url(/archivos/imagen/fondomonitoreo.jpg);
+    padding-bottom:10px;
 }
 
 #footer{
-    background: #d3d7cf;
-    height: 120px;
-    border-top: 1px #707070 solid;
+    background: #fff url(/archivos/imagen/fondofooter.jpg);
+    height: 150px;
+    border-top: 1px #071527 solid;
 }
 .wrapper {
     width: 960px;
@@ -31,9 +32,10 @@ body{
     width: 940px;
     margin: 0 auto;
     background: #fff;
-    padding-left: 10px;
-    padding-right: 10px;
     padding-top: 0px;
+   border-radius:5px;
+   -moz-border-radius:5px;
+   -webkit-border-radius:5px;
 }
 .clean{
     clear: both;
@@ -70,11 +72,11 @@ a:hover{
     margin-right: 10px;
 }
 .top .entrar_link a{
-    color: #fff;
+    color: #4D4D4D;
 }
 .tools .subtitulo{
     font-size: 16px;
-    color: #d0d0cb;
+    color: #64645b;
     margin-top: 15px;
     margin-bottom: 15px;
     float: left;
@@ -83,16 +85,27 @@ a:hover{
     float: right;
     margin-top: 20px;
     margin-right: 10px;
+
 }
 .tools .nav a{
     display: block;
     float: left;
     text-indent:-9999px;
+    -webkit-box-shadow:#ABABAB 0px 0px 9px ;
+    -moz-box-shadow:#ABABAB 0px 0px 9px ;
+    box-shadow:#ABABAB 0px 0px 9px ;
+    border-bottom:#efefef 1px solid;
 }
 .tools .nav a.init{
     background: url(/archivos/imagen/sprite_menu.png) no-repeat;
     width: 82px;
-    height: 30px;    
+    height: 30px;
+   border-bottom-left-radius:5px;
+   border-top-left-radius:5px;
+   -moz-border-radius-bottomleft:5px;
+   -moz-border-radius-topleft:5px;
+   -webkit-border-bottom-left-radius:5px;
+   -webkit-border-top-left-radius:5px;
 }
 .tools .nav a.init:hover{
     background-position: 0 -30px;    
@@ -109,8 +122,14 @@ a:hover{
 .tools .nav a.about{
     background: url(/archivos/imagen/sprite_menu.png) no-repeat;
     background-position: -202px 0;
-    width: 90px;
+    width: 88px;
     height: 30px;
+   border-bottom-right-radius:5px;
+   border-top-right-radius:5px;
+   -moz-border-radius-bottomright:5px;
+   -moz-border-radius-topright:5px;
+   -webkit-border-bottom-right-radius:5px;
+   -webkit-border-top-right-radius:5px;
 }
 .tools .nav a.about:hover{
     background-position: -202px -30px;
@@ -228,35 +247,34 @@ a:hover{
 }
 #footer .organizaciones .zonas{
     font-size: 15px;
-    color: #384e66;
+    color: #466382;
     line-height: 25px;
 }
 #footer .made{
     background: url(/archivos/imagen/fondo_desarrollado.png) no-repeat;
-    width: 224px;
-    height: 64px;
+    width: 226px;
+    height: 66px;
     float: right;
     margin-top: 20px;
     margin-right: 30px;
+    color: #fff;
 }
 #footer .made .developed{
     margin-top: 15px;
     margin-left: 80px;
-    color: #2d2d2d;
+    color: #A2D94D;
 }
 #footer .made .developed a{
-    color: #2d2d2d;
+    color: #A2D94D;
     font-weight: bold;
 }
 .contenido{
-    padding-bottom: 1px;
-    padding-top: 1px;
+    padding: 1px 10px 1px 10px;
 }
 caption {
     padding: 5px;
-    margin:0 auto;
     width:auto;
-    margin-top:15px;
+    margin-top:0px;
     margin-bottom:5px;
     text-align: left;
     font-size:18px;
@@ -324,7 +342,7 @@ pre { font-size: 130%; background: #f7f7f7; padding: 10px 10px; font-weight: bol
 }
 /* CSS DE LOS INDICADORES */
 #indicadores{
-    margin-top: -10px;
+    margin-top: 10px;
 }
 #indicadores h2{    
     color: #665845;
@@ -339,11 +357,11 @@ pre { font-size: 130%; background: #f7f7f7; padding: 10px 10px; font-weight: bol
     padding: 13px 28px 11px;
     color: #000;
     text-decoration: none;
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
     -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
-    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    text-shadow: 0 1px 0px #fff;
     border-bottom: 1px solid rgba(0,0,0,0.25);
     position: relative;
     cursor:pointer
@@ -351,23 +369,28 @@ pre { font-size: 130%; background: #f7f7f7; padding: 10px 10px; font-weight: bol
 
 .button, .button:visited,.medium.button, .medium.button:visited {
     font-size: 13px;
-    font-weight: bold;
     line-height: 1;
-    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    text-shadow: 0 1px 0px #fff;
 }
 
 /* FIN BOTONES DE LOS INDICADORES */
 
 /* CONTENEDOR DE LOS FILTROS COMO DEL MENU PRINCIPAL DE LOS INDICADORES */
 
+#seleccionindicador{
+    font-size:22px;
+    color:#3d4747;
+    padding-left:10px;
+    margin-bottom:10px;
+}
 #contenedor_indicadores {
-    width: 930px;
+    width: 900px;
     margin: 0 auto;
     background: #fff;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 0px;
-    padding-bottom: 20px;
+    padding-bottom: 5px;
 }
 #contenedor_indicadores a {
     align: center;
@@ -375,17 +398,23 @@ pre { font-size: 130%; background: #f7f7f7; padding: 10px 10px; font-weight: bol
     margin-right: 2px;
 }
 #titulo{
-    padding: 10px 11px 12px 24px;
-    background: #F3EFC4 url(/archivos/imagen/seleccionBarra.png) no-repeat left;
-    font-size:22px;
+    padding: 10px 11px 12px 14px;
+    background: #fff url(/archivos/imagen/seleccionBarra.png) repeat-x;
+    font-size:18px;
     font-weight:bold;        
     height:20px;
-    color:#665845;
-    text-shadow: 0px -1px 1px #fff;
+    color:#383838;
+    text-shadow: 0px 1px 1px #fff;
+    border-top-right-radius:5px;
+    border-top-left-radius:5px;
+    -moz-border-radius-topright:5px;
+    -moz-border-radius-topleft:5px;
+    -webkit-border-top-right-radius:5px;
+   -webkit-border-top-left-radius:5px;
 }
 .formulario_consulta{
     padding-left: 10px;
-    background-color: #d3d3d3;
+     background: #222 url(../imagen/fondoform.png) repeat-x;
 }
 input[type='submit']{
     background: url(/archivos/imagen/boton.png) repeat-x;
@@ -415,27 +444,31 @@ input[type='submit']:hover{
     color: #000;
 }
 #contenedor_igual {
-    padding: 0px 11px 0px 24px;
-    background: #d8d39e url(/archivos/imagen/seleccionBarra.png) no-repeat left;
+    background: #f6f6a4;
     font-size:16px;
     font-weight:bold;        
     height:34px;
     line-height: 34px;
-    color:#000;
-    text-shadow: 0px -1px 1px #fff;
+    color:#bd9933;
+    border-bottom:#e3e400 1px solid;
+    
 }
 #contenedor_igual a{
     text-decoration: none;
     font-size:16px;
     font-weight:bold;
-    color:#000;
-    text-shadow: 0px -1px 1px #fff;
+    color:#8c8c75;
     float: left;
     display: block;
+    padding:0px 10px 0px 10px;
+    border-right:#c6c693 1px solid;
+
+}
+.contenedor_igual_selected {        
+    background: url(/archivos/imagen/fondosubmenuhover.png) repeat-x;
 }
 #contenedor_igual a:hover {        
-    color:#fff;
-    text-shadow: 0px -1px 1px #000;
+    background: url(/archivos/imagen/fondosubmenuhover.png) repeat-x;
 }
 .separador_vert2{
     float: left;    
@@ -453,6 +486,9 @@ input[type='submit']:hover{
     -webkit-border-top-right-radius:7px;
     border:#ebebe4 1px solid;
     margin-bottom:10px;
+    margin-top:10px;
+    margin-left:15px;
+    margin-right:12px;
     float:right;
 }
 
@@ -475,7 +511,7 @@ input[type='submit']:hover{
     display:block;
     width:215px;
     height:20px;
-    background:#fff url(../imagen/fondo_widget_grafico.png);
+    background:#fff;
     border-bottom:#e1dccb 1px solid;
     text-decoration:none;
     color:#8B8989;
@@ -483,11 +519,14 @@ input[type='submit']:hover{
     padding-top:7px;
     padding-left:25px;
 }
+.graficos_widget a:hover{
+    background:#FFFCD9;
+}
 
 /*Esta es la parte de las variables filtradas y mostradas al usuario que consulta*/
 
 #filtros{
-    
+    margin-top:10px;
     width:962px;
 }
 
@@ -541,12 +580,26 @@ input[type='submit']:hover{
 }
 .cambiar_indicador{
     float: right;
-    margin: -11px 0 0 0;
-    padding: -2px 0 0 0;
 }
 .cambiar_indicador a{
-    color: #665845;
+    color: #567b47;
+    font-size:16px;
+    display:block;
+    float:left;
+    height:20px;
+    line-height:20px;
     
+}
+
+.cambiar_indicador a:hover{
+    text-decoration:none;
+    color:#243C24;
+    
+}
+#estado img{
+    margin-top:-6px;
+    margin-left:5px;
+    float:right;
 }
 
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default{
@@ -582,3 +635,4 @@ table.tablesorter thead tr .headerSortDown {
 .tablesorter .header{
     padding-left:25px !important;
 }
+
