--- a/monitoreo/templates/simas/ahorro_credito.html
+++ b/monitoreo/templates/simas/ahorro_credito.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {%load unslugify %}
 {%block titulo %}
-Subindicador Ahorro y Credito
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+Ahorro y Credito
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador<span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a> </div>
 {%endblock%}
 {%block extra_header%}
 <script type="text/javascript">
@@ -86,7 +86,7 @@ Subindicador Ahorro y Credito
         </tbody>
     </table>
 
-    <table>
+    <table width=510>
         <caption>Los créditos</caption>
         <thead>
             <tr>
