--- a/monitoreo/templates/simas/educacion.html
+++ b/monitoreo/templates/simas/educacion.html
@@ -134,11 +134,14 @@ var chart;
         });
     });
 </script>
+<style type="text/css">
+    .educacion{background: url(/archivos/imagen/fondosubmenuhover.png) repeat-x;}
+</style>
 {%endblock%}
 
 {%block titulo%}
-Subindicador Educación
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+Familia &raquo; Subindicador Educación
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a></div>
 {%endblock%}
 
 {% block contenido %}
