--- a/monitoreo/templates/simas/equipos.html
+++ b/monitoreo/templates/simas/equipos.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {%load unslugify %}
 {%block titulo%}
-Subindicador Bienes
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+Bienes
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador<span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a> </div>
 {%endblock%}
 {% block extra_header %}
 <script type="text/javascript">
@@ -75,7 +75,6 @@ Subindicador Bienes
 </script>
 {% endblock %}
 {% block contenido %}
-
 
 <div id="mostrar">
      {% include "simas/menu.html" %}
