--- a/monitoreo/templates/simas/fincas.html
+++ b/monitoreo/templates/simas/fincas.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 {%load unslugify %}
 {%block titulo%}
-Subindicador Tierra
-<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador</a> <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></div>
+Tierra &raquo; Subindicador Uso de tierra
+<div class="cambiar_indicador"><a href="#" id="mas">Cambiar Indicador <span id="estado" class="estadouno"><img src="/archivos/imagen/menos.png"/></span></a></div>
 {%endblock%}
 {% block extra_header %}
+<style type="text/css">
+    .tierra{background: url(/archivos/imagen/fondosubmenuhover.png) repeat-x;}
+</style>
 <script type="text/javascript" src="{{MEDIA_URL}}js/highcharts.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}js/exporting.js"></script>
 <script type="text/javascript">
