--- a/monitoreo/templates/simas/mitigacion.html
+++ b/monitoreo/templates/simas/mitigacion.html
@@ -28,7 +28,7 @@
             yAxis: {
                 min: 0,
                 title: {
-                    text: 'Frecuencias'
+                    text: 'Porcentajes (%)'
                 }
             },
             
@@ -61,7 +61,7 @@
                         x: -3,
                         y: 0,
                             formatter: function() {
-                                return this.y + '';
+                                return this.y + '%';
                                                   },
                         style: {
                             font: 'normal 13px Verdana, sans-serif'
