--- a/monitoreo/templates/simas/cultivos.html
+++ b/monitoreo/templates/simas/cultivos.html
@@ -17,6 +17,7 @@ Subindicador los Cultivos y la producción
             <tr>
                 <th>CULTIVOS</th>
                 <th>Unidad</th>
+                <th>Número</th>
                 <th>Total produccion por año</th>
                 <th>Consumo por año</th>
                 <th>Venta libre por año</th>
@@ -28,6 +29,7 @@ Subindicador los Cultivos y la producción
             <tr>
                 <td>{{key|unslugify}}</td>
                 <td>{{value.key2|unslugify}}</td>
+                <td>{{value.numero|unslugify}}</td>
                 <td>{{value.totales|floatformat}}</td>
                 <td>{{value.consumo|floatformat}}</td>
                 <td>{{value.libre|floatformat}}</td>
