--- a/monitoreo/templates/simas/cultivos.html
+++ b/monitoreo/templates/simas/cultivos.html
@@ -716,7 +716,7 @@ function Grafo12(){
             width: 620
         },
         title: {
-            text: 'Distribución de productividad Maiz'
+            text: 'Rangos de productividad Maiz'
         },
         subtitle: {
             text: ''
@@ -782,7 +782,7 @@ function Grafo13(){
             width: 620
         },
         title: {
-            text: 'Distribución de productividad Frijol'
+            text: 'Rangos de productividad Frijol'
         },
         subtitle: {
             text: ''
@@ -847,7 +847,7 @@ function Grafo14(){
             width: 620
         },
         title: {
-            text: 'Distribución de productividad Plátano'
+            text: 'Rangos de productividad Plátano'
         },
         subtitle: {
             text: ''
@@ -912,7 +912,7 @@ function Grafo15(){
             width: 620
         },
         title: {
-            text: 'Distribución de productividad Guíneo'
+            text: 'Rangos de productividad Guíneo'
         },
         subtitle: {
             text: ''
@@ -978,7 +978,7 @@ function Grafo16(){
             width: 620
         },
         title: {
-            text: 'Distribución de productividad Cáfe'
+            text: 'Rangos de productividad Cáfe'
         },
         subtitle: {
             text: ''
@@ -1044,7 +1044,7 @@ function Grafo17(){
             width: 620
         },
         title: {
-            text: 'Distribución de productividad Cacao'
+            text: 'Rangos de productividad Cacao'
         },
         subtitle: {
             text: ''
@@ -1125,7 +1125,7 @@ function Grafo17(){
         <a href="#" id="grafico9" onclick="Grafo9();" class="grafo">Guíneo</a>
 	    <a href="#" id="grafico10" onclick="Grafo10();" class="grafo">Cáfe</a>
 	    <a href="#" id="grafico11" onclick="Grafo11();" class="grafo">Cacao</a>
-	    <h1>Gráficos: Distribución de la productividad</h1>
+	    <h1>Gráficos: Rangos de la productividad</h1>
 	    <a href="#" id="grafico12" onclick="Grafo12();" class="grafo">Maíz</a>
         <a href="#" id="grafico13" onclick="Grafo13();" class="grafo">Frijol</a>
         <a href="#" id="grafico14" onclick="Grafo14();" class="grafo">Plátano</a>
