--- a/monitoreo/templates/simas/cultivos.html
+++ b/monitoreo/templates/simas/cultivos.html
@@ -736,7 +736,7 @@ function Grafo12(){
         tooltip: {
             formatter: function() {
                 return ''+
-                    this.series.name +'qq: '+ this.y +'';
+                    this.series.name +'qq: '+ this.y +'%';
             }
         },
         plotOptions: {
@@ -750,10 +750,10 @@ function Grafo12(){
                 minPointLength : 1
             }
         },
-        series: [{% for key, value in distribucion_maiz.items %}
+        series: [{% for key in distribucion_maiz.llaves %}
             {
                 name: '{{key|unslugify}}',
-                data: [{%if value == None%} 0 {%else%} {{value}} {%endif%}],
+                data: [{{distribucion_maiz.rangos|get_value:key}}],
                 dataLabels: {
                     enabled: true,
                     rotation: 0,
@@ -762,7 +762,7 @@ function Grafo12(){
                     x: -3,
                     y: 0,
                         formatter: function() {
-                            return this.y + '';
+                            return this.y + '%';
                                               },
                     style: {
                         font: 'normal 13px Verdana, sans-serif'
@@ -802,7 +802,7 @@ function Grafo13(){
         tooltip: {
             formatter: function() {
                 return ''+
-                    this.series.name +'qq: '+ this.y +'';
+                    this.series.name +'qq: '+ this.y +'%';
             }
         },
         plotOptions: {
@@ -816,10 +816,10 @@ function Grafo13(){
                 minPointLength : 1
             }
         },
-        series: [{% for key, value in distribucion_frijol.items %}
+        series: [{% for key in distribucion_frijol.llaves %}
             {
                 name: '{{key|unslugify}}',
-                data: [{%if value == None%} 0 {%else%} {{value}} {%endif%}],
+                data: [{{distribucion_frijol.rangos|get_value:key}}],
                 dataLabels: {
                     enabled: true,
                     rotation: 0,
@@ -828,7 +828,7 @@ function Grafo13(){
                     x: -3,
                     y: 0,
                         formatter: function() {
-                            return this.y + '';
+                            return this.y + '%';
                                               },
                     style: {
                         font: 'normal 13px Verdana, sans-serif'
@@ -867,7 +867,7 @@ function Grafo14(){
         tooltip: {
             formatter: function() {
                 return ''+
-                    this.series.name +'cbz: '+ this.y +'';
+                    this.series.name +'cbz: '+ this.y +'%';
             }
         },
         plotOptions: {
@@ -881,10 +881,10 @@ function Grafo14(){
                 minPointLength : 1
             }
         },
-        series: [{% for key, value in distribucion_platano.items %}
+        series: [{% for key in distribucion_platano.llaves %}
             {
                 name: '{{key|unslugify}}',
-                data: [{%if value == None%} 0 {%else%} {{value}} {%endif%}],
+                data: [{{distribucion_platano.rangos|get_value:key}}],
                 dataLabels: {
                     enabled: true,
                     rotation: 0,
@@ -893,7 +893,7 @@ function Grafo14(){
                     x: -3,
                     y: 0,
                         formatter: function() {
-                            return this.y + '';
+                            return this.y + '%';
                                               },
                     style: {
                         font: 'normal 13px Verdana, sans-serif'
@@ -932,7 +932,7 @@ function Grafo15(){
         tooltip: {
             formatter: function() {
                 return ''+
-                    this.series.name +'cbz: '+ this.y +'';
+                    this.series.name +'cbz: '+ this.y +'%';
             }
         },
         plotOptions: {
@@ -946,10 +946,10 @@ function Grafo15(){
                 minPointLength : 1
             }
         },
-        series: [{% for key, value in distribucion_guineo.items %}
+        series: [{% for key in distribucion_guineo.llaves %}
             {
                 name: '{{key|unslugify}}',
-                data: [{%if value == None%} 0 {%else%} {{value}} {%endif%}],
+                data: [{{distribucion_guineo.rangos|get_value:key}}],
                 dataLabels: {
                     enabled: true,
                     rotation: 0,
@@ -958,7 +958,7 @@ function Grafo15(){
                     x: -3,
                     y: 0,
                         formatter: function() {
-                            return this.y + '';
+                            return this.y + '%';
                                               },
                     style: {
                         font: 'normal 13px Verdana, sans-serif'
@@ -998,7 +998,7 @@ function Grafo16(){
         tooltip: {
             formatter: function() {
                 return ''+
-                    this.series.name +'qq: '+ this.y +'';
+                    this.series.name +'qq: '+ this.y +'%';
             }
         },
         plotOptions: {
@@ -1012,10 +1012,10 @@ function Grafo16(){
                 minPointLength : 1
             }
         },
-        series: [{% for key, value in distribucion_cafe.items %}
+        series: [{% for key in distribucion_cafe.llaves %}
             {
                 name: '{{key|unslugify}}',
-                data: [{%if value == None%} 0 {%else%} {{value}} {%endif%}],
+                data: [{{distribucion_cafe.rangos|get_value:key}}],
                 dataLabels: {
                     enabled: true,
                     rotation: 0,
@@ -1024,7 +1024,7 @@ function Grafo16(){
                     x: -3,
                     y: 0,
                         formatter: function() {
-                            return this.y + '';
+                            return this.y + '%';
                                               },
                     style: {
                         font: 'normal 13px Verdana, sans-serif'
@@ -1064,7 +1064,7 @@ function Grafo17(){
         tooltip: {
             formatter: function() {
                 return ''+
-                    this.series.name +'qq: '+ this.y +'';
+                    this.series.name +'qq: '+ this.y +'%';
             }
         },
         plotOptions: {
@@ -1078,10 +1078,10 @@ function Grafo17(){
                 minPointLength : 1
             }
         },
-        series: [{% for key, value in distribucion_cacao.items %}
+        series: [{% for key in distribucion_cacao.llaves %}
             {
                 name: '{{key|unslugify}}',
-                data: [{{value}}],
+                data: [{{distribucion_cacao.rangos|get_value:key}}],
                 dataLabels: {
                     enabled: true,
                     rotation: 0,
@@ -1090,7 +1090,7 @@ function Grafo17(){
                     x: -3,
                     y: 0,
                         formatter: function() {
-                            return this.y + '';
+                            return this.y + '%';
                                               },
                     style: {
                         font: 'normal 13px Verdana, sans-serif'
